--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.8.0"
+constraintlayoutVersion = "2.0.0"
 glide = "4.14.2"
 gson = "2.10"
 kotlin = "1.9.24"
@@ -14,6 +15,7 @@ constraintlayout = "2.2.1"
 retrofit = "2.9.0"
 
 [libraries]
+androidx-constraintlayout-v200 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
