--- a/ui/src/main/AndroidManifest.xml
+++ b/ui/src/main/AndroidManifest.xml
@@ -16,21 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.PlaylistMaker"
         tools:targetApi="31">
-        <activity
-            android:name=".presentation.ui.player.AudioPlayerActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.ui.media.MediaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.ui.search.SearchActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.ui.settings.SettingsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.ui.main.MainActivity"
-            android:exported="true">
+        <activity android:name=".presentation.ui.root.RootActivity"
+            android:exported="true"
+            android:windowSoftInputMode="adjustNothing" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
